--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body{
     font-family: "Roboto", sans-serif;
     color: #434455;
+    background-color: #FFFFFF;
 }
 /*-------------------HEADER------------------*/
 .link{
@@ -8,24 +9,25 @@ body{
 }
 .list{
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 .header {
-    max-width: 1440px;
-    height: 72px;
     font-style: normal;
-    background: #FFFFFF;
     border-bottom: 1px solid #E7E9FC;
     margin: 0 auto;
 }
 .header-container {
     display: flex;
     align-items: center;
+    max-width: 1440px;
+    height: 72px;
 }
 .container {
     width: 1158px;
-    padding-left: 156px;
-    padding-right: 156px;
-    margin: 0px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0px auto;
 }
 .header-nav {
     display: flex;
@@ -62,13 +64,16 @@ body{
 }
 .header-link {
     font-family: 'Roboto';
+    padding-top: 24px;
+    padding-bottom: 24px;
+    display: block;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2E2F42;
     flex: none;
-     order: 0;
+    order: 0;
     flex-grow: 0;
 }
 .header-link:hover{
@@ -104,7 +109,7 @@ body{
 .service {
     background-color: #2e2f42;
     padding-top: 188px;
-    padding-bottom: 292px;
+    padding-bottom: 188px;
     text-align: center;
 }
 
@@ -124,6 +129,7 @@ body{
     font-family: "Roboto", sans-serif;
     min-width: 169px;
     height: 56px;
+    margin-top: 45px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -132,11 +138,13 @@ body{
     cursor: pointer;
     background: #4D5AE5;
     border-radius: 4px;
+    border: none;
+}
+.service-btn:hover{
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .skill {
-    width: 1128px;
-    height: 104px;
     padding-top: 120px;
     padding-bottom: 120px;
 }
@@ -147,6 +155,7 @@ body{
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin: 0;
 }
 
 .skill-list {
@@ -159,6 +168,7 @@ body{
 .skill-text {
     line-height: 1.5;
     letter-spacing: 0.02em;
+    margin: 8px 0 0 0;
 }
 
 .info {
@@ -171,7 +181,7 @@ body{
     text-align: center;
     text-transform: capitalize;
     color: #2e2f42;
-    padding-bottom: 72px;
+    margin: 0 0 72px 0;
 }
 
 .info-list {
@@ -182,9 +192,6 @@ body{
 .info-item {}
 
 .team {
-    min-width: 1440px;
-    height: 732px;
-    background: #F4F4FD;
 }
 
 .team-our-title {
@@ -213,7 +220,6 @@ body{
 }
 
 .team-item {
-    background: #FFFFFF;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 0px 0px 4px 4px;
     text-align: center;
@@ -296,7 +302,6 @@ body{
 }
 .catalog-item{
     border: 1px solid #E7E9FC;
-    background: #FFFFFF;
 }
 .catalog-title {
     font-family: 'Roboto', sans-serif;
