--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,11 @@ body{
     color: #434455;
     background-color: #FFFFFF;
 }
+img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
 /*-------------------HEADER------------------*/
 .link{
     text-decoration: none;
@@ -310,10 +315,9 @@ body{
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .catalog-list{
-    width: 360px;
-    height: 420px;
     display: flex;
     gap: 24px;
+    margin-bottom: 48px;
 }
 .container-catalog{
     padding-top: 32px;
