--- a/css/styles.css
+++ b/css/styles.css
@@ -311,6 +311,7 @@ img {
     color: #FFFFFF;
     background: #404BBF;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border: 1px solid #404BBF;
 }
 .catalog-list{
     display: flex;
@@ -320,7 +321,9 @@ img {
 }
 .container-catalog{
     padding-top: 32px;
-    border: 1px solid #E7E9FC;
+    border-right: 1px solid #E7E9FC;
+    border-left: 1px solid #E7E9FC;
+    border-bottom: 1px solid #E7E9FC;
     padding-bottom: 32px;
     padding-left: 16px;
 }
