--- a/css/styles.css
+++ b/css/styles.css
@@ -370,8 +370,10 @@ img {
 }
 .footer-logo {
     font-family: "Raleway", sans-serif;
-    padding-bottom: 17.5px;
+    margin-bottom: 17.5px;
     font-weight: 800;
+    width: 115px;
+    height: 24px;
     font-size: 18px;
     line-height: 1.17;
     display: flex;
